# cpp_external

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bootstrap.bat
doom/: download_doom.py
game/: CMakeLists.txt  entity.h  game.cpp
simple_game/: simple_game.cpp  simple_game.h
